--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
     </a>
     <main id="map"></main>
 
-
-
     <script type="text/javascript" src="dist/js/jquery-3.1.1.min-min.js"></script>
     <script type="text/javascript" src="dist/js/knockout-3.4.0-min.js"></script>
     <script src="dist/js/app-min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnaEWPmbB-1FHzO0aVoRK-KiHtz8p59g4&callback=initMap" async defer>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnaEWPmbB-1FHzO0aVoRK-KiHtz8p59g4&callback=initMap" onerror="alert('Sorry, Google Maps is currently unavailable. Please try later.');" async defer>
     </script>
-
-
-
 
 </body>
 
